--- a/style.css
+++ b/style.css
@@ -7,24 +7,59 @@ body {
   margin-right: auto;
   text-align: center;
   font-family: 'Roboto', sans-serif;
+  background-color: #515151;
+  color: #131313;
+}
+ table, tr, th, td {
+   border: 1px solid black;
+   border-collapse: collapse;
+   margin-left: auto;
+   margin-right: auto;
+   padding: 2px 10px;
+ }
+table {
+  margin-bottom: 12px;
+}
+
+.locationName {
+  font-size: 30px;
+  color: #FF4D00;
+  font-weight: 400;
+  margin-bottom: 0px;
+}
+
+ th {
+   background-color: #FF4D00;
+ }
+
+table {
   background-color: #F9F9F9;
 }
+/*Below here is some stuff for index.html*/
 
-p, li {
-  color: #515151;
-}
-
-li {
-  list-style: none;
-}
-
-article h1 {
+header h1 {
+  font-size: 50px;
   color: #FF4D00;
-  background-color: #515151;
+  font-weight: 900;
+  margin-bottom: -16px;
 }
 
-header {
-  margin-bottom: 20px;
-  background-color: #FF4D00;
-  padding: 5px;
+ul, li {
+  list-style: none;
+  padding: 2px;
+}
+
+article {
+  background-color: #F9F9F9;
+  border-radius: 10px;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2px 20px 8px 20px;
+}
+
+img {
+  border: 4px solid #FF4D00;
+  border-radius: 50%;
+  margin-bottom: 10px;
 }
