--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ ul, li {
   padding: 2px;
 }
 
-article {
+.locations-and-hours {
   background-color: #F9F9F9;
   border-radius: 10px;
   width: 500px;
