--- a/style.css
+++ b/style.css
@@ -2,18 +2,98 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,900,100);
 
 body {
+  background-color: #F9F9F9;
+  font-family: 'Roboto', sans-serif;
+  color: #131313;
+}
+
+#formPage {
+  max-width: 960px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#salesDataArticle {
+  float:left;
+}
+
+aside {
+  float:right;
+  margin-top: 40px;
+}
+
+fieldset {
+  padding: 20px 10px;
+  border: 2px solid #FF4D00;
+}
+
+legend {
+  text-align: center;
+}
+
+input, label {
+  margin: 2px 0;
+}
+
+table, tr, th, td {
+  border-collapse: collapse;
+}
+
+table {
+  margin-top: 40px;
+  width: 540px;
+  background-color: white;
+}
+
+th:nth-child(1) {
+  text-align: left;
+  padding-left: 2px;
+}
+
+td:nth-child(1) {
+  text-align: left;
+  padding-left: 2px;
+}
+
+th:nth-child(2), th:nth-child(3), th:nth-child(4) {
+  text-align: right;
+  padding-right: 2px;
+}
+
+td:nth-child(2), td:nth-child(3), td:nth-child(4) {
+  text-align: right;
+  padding-right: 2px;
+}
+
+.locationName {
+  background-color: #FF4D00;
+  font-size: 30px;
+}
+
+tr:nth-of-type(odd) {
+  background-color: #e1e1e1;
+}
+
+button {
+  position: relative;
+  left: 180px;
+}
+
+/*body {
   position: relative;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  background-color: #515151;
+  background-color: #F9F9F9;
   color: #131313;
   max-width: 960px;
 }
 #salesDataArticle{
   float: left;
 }
+
 table, tr, td {
    border: 1px solid black;
    border-collapse: collapse;
@@ -42,6 +122,7 @@ table {
 
  th {
    background-color: #FF4D00;
+   color: #131313;
  }
 
 aside {
@@ -65,10 +146,10 @@ input:not([class]) {
 
 .storeNameInput {
   width: 90%;
-}
+}*/
 
 /*Below here is some stuff for index.html*/
-
+/*
 header h1 {
   font-size: 50px;
   color: #FF4D00;
@@ -94,4 +175,4 @@ img {
   border: 4px solid #FF4D00;
   border-radius: 50%;
   margin-bottom: 10px;
-}
+}*/
