--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   margin-right: auto;
 }
 
+#mainPage {
+  text-align: center;
+}
+
 #salesDataArticle {
   float:left;
 }
@@ -78,6 +82,30 @@ tr:nth-of-type(odd) {
 button {
   position: relative;
   left: 180px;
+}
+/**/
+h1 {
+  color: #FF4D00;
+}
+
+img {
+  border: 4px solid #FF4D00;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+#locations-and-hours {
+  background-color: #e1e1e1;
+  border-radius: 10px;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2px 20px 8px 20px;
+}
+
+ul, li {
+  list-style: none;
+  padding: 2px;
 }
 
 /*body {
