--- a/css/style.css
+++ b/css/style.css
@@ -101,106 +101,11 @@ img {
   margin-left: auto;
   margin-right: auto;
   padding: 2px 20px 8px 20px;
+  z-index: 1;
+  border-radius: 50px 4px;
 }
 
 ul, li {
   list-style: none;
   padding: 2px;
 }
-
-/*body {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  background-color: #F9F9F9;
-  color: #131313;
-  max-width: 960px;
-}
-#salesDataArticle{
-  float: left;
-}
-
-table, tr, td {
-   border: 1px solid black;
-   border-collapse: collapse;
-   margin-left: auto;
-   margin-right: auto;
-   padding: 2px 10px;
- }
-table {
-  margin-bottom: 12px;
-  background-color: #F9F9F9;
-  width: 540px;
-}
-
-#odysseys {
-  font-size: 30px;
-  color: #131313;
-}
-
-.locationName {
-  font-size: 30px;
-  color: #FF4D00;
-  font-weight: 400;
-  margin-bottom: 0px;
-  text-align: center;
-}
-
- th {
-   background-color: #FF4D00;
-   color: #131313;
- }
-
-aside {
-  margin-top:60px;
-  width: 360px;
-  float: right;
-  text-align: left;
-}
-
-form {
-  margin-bottom: 20px;
-}
-
-label, input {
-  margin: 6px;
-}
-
-input:not([class]) {
-  width: 60px;
-}
-
-.storeNameInput {
-  width: 90%;
-}*/
-
-/*Below here is some stuff for index.html*/
-/*
-header h1 {
-  font-size: 50px;
-  color: #FF4D00;
-  font-weight: 900;
-  margin-bottom: -16px;
-}
-
-ul, li {
-  list-style: none;
-  padding: 2px;
-}
-
-#locations-and-hours {
-  background-color: #F9F9F9;
-  border-radius: 10px;
-  width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 2px 20px 8px 20px;
-}
-
-img {
-  border: 4px solid #FF4D00;
-  border-radius: 50%;
-  margin-bottom: 10px;
-}*/
