--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ input, label {
 
 table, tr, th, td {
   border-collapse: collapse;
+  opacity: .9;
+}
+
+table:hover, tr:hover, th:hover, td:hover {
+  border-collapse: collapse;
+  opacity: 1;
 }
 
 table {
@@ -82,6 +88,13 @@ tr:nth-of-type(odd) {
 button {
   position: relative;
   left: 180px;
+  background-color: #FF4D00;
+  border-style: none;
+  box-shadow: 0px 0px 5px 5px #888;
+}
+
+button:hover{
+  box-shadow: 0px 0px 2px 2px;
 }
 /**/
 h1 {
@@ -92,9 +105,15 @@ img {
   border: 4px solid #FF4D00;
   border-radius: 50%;
   margin-bottom: 10px;
+  transition: all 1s;
+}
+
+img:hover{
+  transform: scale(1.1);
 }
 
 #locations-and-hours {
+  position:relative;
   background-color: #e1e1e1;
   border-radius: 10px;
   width: 500px;
@@ -110,14 +129,18 @@ ul, li {
   padding: 2px;
 }
 
+li:hover{
+  color: #F9F9F9;
+}
+
 .sneakyLink {
   width: 5px;
   height: 5px;
   border-radius: 50%;
-  position: relative;
+  position: absolute;
   z-index: 100;
-  left: 522px;
-  top: 55px;
+  left: 246px;
+  top: -255px;
 }
 
 .sneakyLink:hover {
